--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -179,10 +179,26 @@
     hsl(27 87% 67%);
   --radius:
     0.6rem;
+  --sidebar:
+    oklch(0.985 0 0);
+  --sidebar-foreground:
+    oklch(0.141 0.005 285.823);
+  --sidebar-primary:
+    oklch(0.21 0.006 285.885);
+  --sidebar-primary-foreground:
+    oklch(0.985 0 0);
+  --sidebar-accent:
+    oklch(0.967 0.001 286.375);
+  --sidebar-accent-foreground:
+    oklch(0.21 0.006 285.885);
+  --sidebar-border:
+    oklch(0.92 0.004 286.32);
+  --sidebar-ring:
+    oklch(0.871 0.006 286.286);
   --background:
-    hsl(0 0% 100%);
+    oklch(1 0 0);
   --foreground:
-    hsl(0 0% 3.9%);
+    oklch(0.141 0.005 285.823);
 }
 /*
   ---break---
@@ -236,6 +252,22 @@
     hsl(280 65% 60%);
   --chart-5:
     hsl(340 75% 55%);
+  --sidebar:
+    oklch(0.21 0.006 285.885);
+  --sidebar-foreground:
+    oklch(0.985 0 0);
+  --sidebar-primary:
+    oklch(0.488 0.243 264.376);
+  --sidebar-primary-foreground:
+    oklch(0.985 0 0);
+  --sidebar-accent:
+    oklch(0.274 0.006 286.033);
+  --sidebar-accent-foreground:
+    oklch(0.985 0 0);
+  --sidebar-border:
+    oklch(0.274 0.006 286.033);
+  --sidebar-ring:
+    oklch(0.442 0.017 285.786);
 }
 /*
   ---break---
@@ -297,6 +329,22 @@
     var(--radius);
   --radius-xl:
     calc(var(--radius) + 4px);
+  --color-sidebar-ring:
+    var(--sidebar-ring);
+  --color-sidebar-border:
+    var(--sidebar-border);
+  --color-sidebar-accent-foreground:
+    var(--sidebar-accent-foreground);
+  --color-sidebar-accent:
+    var(--sidebar-accent);
+  --color-sidebar-primary-foreground:
+    var(--sidebar-primary-foreground);
+  --color-sidebar-primary:
+    var(--sidebar-primary);
+  --color-sidebar-foreground:
+    var(--sidebar-foreground);
+  --color-sidebar:
+    var(--sidebar);
 }
 /*
   ---break---
